chore: add new tidb donwnload package

--- a/layouts/download-cn/community.html
+++ b/layouts/download-cn/community.html
@@ -41,6 +41,7 @@
                                 <option>v4.0.2</option>
                                 <option>v4.0.3</option>
                                 <option>v4.0.4</option>
+                                <option>v4.0.5</option>
                             </select>
                         </div>
                     </div>
