chore: add new tidb download package

--- a/layouts/download-cn/community.html
+++ b/layouts/download-cn/community.html
@@ -42,6 +42,7 @@
                                 <option>v4.0.3</option>
                                 <option>v4.0.4</option>
                                 <option>v4.0.5</option>
+                                <option>v4.0.6</option>
                             </select>
                         </div>
                     </div>
