chore: update language switch link

--- a/layouts/page/index-cn.html
+++ b/layouts/page/index-cn.html
@@ -3,7 +3,7 @@
     <meta name="google-site-verification" content="drHXf-Q97rcbwLZryBSFV8eW1pj1ddF4MHzZOfODhQU" />
     {{$.Scratch.Set "homepage" true }}
     {{$.Scratch.Set "data_i18_cn" true }}
-    {{$.Scratch.Set "data_i18_link" "/en" }}
+    {{$.Scratch.Set "data_i18_link" "https://en.pingcap.com/" }}
     {{- partial "head/preload-css" (dict "href" "/css/index.css") -}}
     {{- partial "head/preload-css" (dict "href" "/css/vendor/swiper.css") -}}
 {{- end -}}
