chore: update content

--- a/layouts/community-cn/high-performance-tidb-challenge.html
+++ b/layouts/community-cn/high-performance-tidb-challenge.html
@@ -329,7 +329,7 @@ High Performance TiDB Challenge
           <div class="detail detail-js detail-1">
             <div class="item">
               <p class="numb">1.</p>
-              <p class="desc">参赛选手必须以小组形式参赛，小组人数不超过五人，每一名参赛队员只能选择一个优化方向，且只能参加一个小组。</p>
+              <p class="desc">参赛选手必须以小组形式参赛，小组人数最多六人（包括顾问和队长），每一名参赛队员只能选择一个优化方向，且只能参加一个小组。</p>
             </div>
             <div class="item">
               <p class="numb">2.</p>
@@ -375,6 +375,10 @@ High Performance TiDB Challenge
             <div class="item">
               <p class="numb">3.</p>
               <p class="desc">没有顾问的小组可以与组委会进行协调，但不保证每个小组都有顾问。</p>
+            </div>
+            <div class="item">
+              <p class="numb">4.</p>
+              <p class="desc">技术顾问也是队伍成员之一，可以参与团队奖金分配。</p>
             </div>
           </div>
         </div>
