--- a/layouts/community-cn/high-performance-tidb-challenge.html
+++ b/layouts/community-cn/high-performance-tidb-challenge.html
@@ -419,12 +419,14 @@ High Performance TiDB Challenge
         <h2 class="sponsor-type">云计算基础设施支持</h2>
         <div class="logo-list">
           <img class="lazy" data-original="/images/community/high-performance-tidb/ucloud.svg" src="/images/svgs/loader-spinner.svg" alt="sponsor logo">
+          <img class="lazy" data-original="/images/community/high-performance-tidb/pingankeji.png" src="/images/svgs/loader-spinner.svg" alt="sponsor logo">
         </div>
       </div>
       <h2 class="sponsor-type">社区支持</h2>
       <div class="logo-list">
         <img class="lazy" data-original="/images/community/high-performance-tidb/oschina.svg" src="/images/svgs/loader-spinner.svg" alt="sponsor logo">
         <img class="lazy" data-original="/images/community/high-performance-tidb/juejin.svg" src="/images/svgs/loader-spinner.svg" alt="sponsor logo">
+        <img class="lazy" data-original="/images/community/high-performance-tidb/segmentfault.png" src="/images/svgs/loader-spinner.svg" alt="sponsor logo">
         <img class="lazy" data-original="/images/community/high-performance-tidb/datafun.svg" src="/images/svgs/loader-spinner.svg" alt="sponsor logo">
         <img class="lazy" data-original="/images/community/high-performance-tidb/csdn.svg" src="/images/svgs/loader-spinner.svg" alt="sponsor logo">
         <img class="lazy" data-original="/images/community/high-performance-tidb/gocn.svg" src="/images/svgs/loader-spinner.svg" alt="sponsor logo">
