chore: add judges to hptc

--- a/layouts/community-cn/high-performance-tidb-challenge.html
+++ b/layouts/community-cn/high-performance-tidb-challenge.html
@@ -222,25 +222,42 @@ High Performance TiDB Challenge
   </div>
 </section>
 
-<!-- <section class="judges">
-  <div class="container">
-    <div class="judge">
-      <div class="avatar"></div>
-      <div class="name"></div>
-      <div class="title"></div>
-    </div>
-    <div class="judge">
-      <div class="avatar"></div>
-      <div class="name"></div>
-      <div class="title"></div>
-    </div>
-    <div class="judge">
-      <div class="avatar"></div>
-      <div class="name"></div>
-      <div class="title"></div>
+<section class="judges">
+  <div class="judges-body">
+    <div class="container">
+      <div class="title-wrapper">
+        <div class="title">评委</div>
+      </div>
+      <div class="judge-list">
+        <div class="judge">
+          <img class="avatar" src="https://download.pingcap.com//images/community/high-performance-tidb/huangdongxu.png"></img>
+          <div class="name">黄东旭 PingCAP</div>
+          <div class="desc">联合创始人兼 CTO</div>
+        </div>
+        <div class="judge">
+          <img class="avatar" src="https://download.pingcap.com//images/community/high-performance-tidb/wangyang.png"></img>
+          <div class="name">汪洋 平安科技</div>
+          <div class="desc">数据库产品部门总经理</div>
+        </div>
+        <div class="judge">
+          <img class="avatar" src="https://download.pingcap.com//images/community/high-performance-tidb/sunxiaoguang.png"></img>
+          <div class="name">孙晓光 知乎</div>
+          <div class="desc">技术平台负责人</div>
+        </div>
+        <div class="judge">
+          <img class="avatar" src="https://download.pingcap.com//images/community/high-performance-tidb/xuchengxuan.png"></img>
+          <div class="name">徐成选 伴鱼</div>
+          <div class="desc">基础架构负责人</div>
+        </div>
+        <div class="judge">
+          <img class="avatar" src="https://download.pingcap.com//images/community/high-performance-tidb/tangliu.png"></img>
+          <div class="name">唐刘 PingCAP</div>
+          <div class="desc">首席架构师</div>
+        </div>
+      </div>
     </div>
   </div>
-</section> -->
+</section>
 
 <section class="learning-materials">
   <div class="learning-body">
