--- a/src/less/community/high-performance-tidb-challenge.less
+++ b/src/less/community/high-performance-tidb-challenge.less
@@ -471,6 +471,42 @@ section {
     }
 }
 
+.judges {
+    .title {
+        text-align: center;
+
+        &::before {
+            left: 50%;
+            width: 10%;
+            transform: translateX(-50%);
+        }
+    }
+
+    .judge-list {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-around;
+
+        .judge {
+            margin: 1rem 3rem 2rem;
+            width: 15%;
+            height: auto;
+            text-align: center;
+            color: @C5;
+
+            .name {
+                margin: 2rem 0 0.3rem;
+                font-size: 18px;
+                font-weight: 600;
+            }
+
+            .desc {
+                font-size: 16px;
+            }
+        }
+    }
+}
+
 .learning-materials {
     background-image: url('https://download.pingcap.com/images/community/high-performance-tidb/learning-material-bg.svg');
     background-repeat: no-repeat;
@@ -1143,6 +1179,26 @@ section {
         }
 
     }
+
+    .judges {
+        .judge-list {
+            .judge {
+                margin: 1rem;
+                width: 25%;
+
+                .name {
+                    margin: 1rem 0 0.3rem;
+                    font-size: 14px;
+                    font-weight: 600;
+                }
+
+                .desc {
+                    font-size: 12px;
+                }
+            }
+        }
+    }
+
 
     .learning-materials {
         .learning-card {
