chore: update content of hptc

--- a/layouts/community-cn/high-performance-tidb-challenge.html
+++ b/layouts/community-cn/high-performance-tidb-challenge.html
@@ -214,6 +214,15 @@ High Performance TiDB Challenge
           <div class="award-level">三等奖</div>
           <div class="detail">每支参赛队伍 <span class="strong">1 万元</span> RMB</div>
         </div>
+        <div class="award">
+          <div class="award-level">新增四重大礼包</div>
+          <div class="detail">除了一二三等奖的现金奖励，组委会决定增设竞赛大礼包；5 万云端资源免费用、10 万 TiDB Cloud
+            代金券送不停、更有知名企业内推和社区周边大礼等你来拿。具体活动规则请参见<a
+              href="https://github.com/pingcap/community/blob/master/challenge-programs/high-performance-tidb-challenge-cn.md"
+              target="_blank">
+              竞赛细则
+            </a></div>
+        </div>
         <div class="annotation">
           注：获奖队伍最终由评委判定，总共不超过 5 支。所有完赛选手都可以获得神秘纪念周边一个～如获奖队伍没有顾问，则顾问奖金分发到参赛小组。
         </div>
@@ -230,27 +239,32 @@ High Performance TiDB Challenge
       </div>
       <div class="judge-list">
         <div class="judge">
-          <img class="avatar" src="https://download.pingcap.com//images/community/high-performance-tidb/huangdongxu.png"></img>
+          <img class="avatar"
+            src="https://download.pingcap.com//images/community/high-performance-tidb/huangdongxu.png"></img>
           <div class="name">黄东旭 PingCAP</div>
           <div class="desc">联合创始人兼 CTO</div>
         </div>
         <div class="judge">
-          <img class="avatar" src="https://download.pingcap.com//images/community/high-performance-tidb/wangyang.png"></img>
+          <img class="avatar"
+            src="https://download.pingcap.com//images/community/high-performance-tidb/wangyang.png"></img>
           <div class="name">汪洋 平安科技</div>
           <div class="desc">数据库产品部门总经理</div>
         </div>
         <div class="judge">
-          <img class="avatar" src="https://download.pingcap.com//images/community/high-performance-tidb/sunxiaoguang.png"></img>
+          <img class="avatar"
+            src="https://download.pingcap.com//images/community/high-performance-tidb/sunxiaoguang.png"></img>
           <div class="name">孙晓光 知乎</div>
           <div class="desc">技术平台负责人</div>
         </div>
         <div class="judge">
-          <img class="avatar" src="https://download.pingcap.com//images/community/high-performance-tidb/xuchengxuan.png"></img>
+          <img class="avatar"
+            src="https://download.pingcap.com//images/community/high-performance-tidb/xuchengxuan.png"></img>
           <div class="name">徐成选 伴鱼</div>
           <div class="desc">基础架构负责人</div>
         </div>
         <div class="judge">
-          <img class="avatar" src="https://download.pingcap.com//images/community/high-performance-tidb/tangliu.png"></img>
+          <img class="avatar"
+            src="https://download.pingcap.com//images/community/high-performance-tidb/tangliu.png"></img>
           <div class="name">唐刘 PingCAP</div>
           <div class="desc">首席架构师</div>
         </div>
@@ -435,18 +449,26 @@ High Performance TiDB Challenge
       <div class="ucloud">
         <h2 class="sponsor-type">云计算基础设施支持</h2>
         <div class="logo-list">
-          <img class="lazy" data-original="/images/community/high-performance-tidb/ucloud.svg" src="/images/svgs/loader-spinner.svg" alt="sponsor logo">
-          <img class="lazy" data-original="/images/community/high-performance-tidb/pingankeji.png" src="/images/svgs/loader-spinner.svg" alt="sponsor logo">
+          <img class="lazy" data-original="/images/community/high-performance-tidb/ucloud.svg"
+            src="/images/svgs/loader-spinner.svg" alt="sponsor logo">
+          <img class="lazy" data-original="/images/community/high-performance-tidb/pingankeji.png"
+            src="/images/svgs/loader-spinner.svg" alt="sponsor logo">
         </div>
       </div>
       <h2 class="sponsor-type">社区支持</h2>
       <div class="logo-list">
-        <img class="lazy" data-original="/images/community/high-performance-tidb/oschina.svg" src="/images/svgs/loader-spinner.svg" alt="sponsor logo">
-        <img class="lazy" data-original="/images/community/high-performance-tidb/juejin.svg" src="/images/svgs/loader-spinner.svg" alt="sponsor logo">
-        <img class="lazy" data-original="/images/community/high-performance-tidb/segmentfault.png" src="/images/svgs/loader-spinner.svg" alt="sponsor logo">
-        <img class="lazy" data-original="/images/community/high-performance-tidb/datafun.svg" src="/images/svgs/loader-spinner.svg" alt="sponsor logo">
-        <img class="lazy" data-original="/images/community/high-performance-tidb/csdn.svg" src="/images/svgs/loader-spinner.svg" alt="sponsor logo">
-        <img class="lazy" data-original="/images/community/high-performance-tidb/gocn.svg" src="/images/svgs/loader-spinner.svg" alt="sponsor logo">
+        <img class="lazy" data-original="/images/community/high-performance-tidb/oschina.svg"
+          src="/images/svgs/loader-spinner.svg" alt="sponsor logo">
+        <img class="lazy" data-original="/images/community/high-performance-tidb/juejin.svg"
+          src="/images/svgs/loader-spinner.svg" alt="sponsor logo">
+        <img class="lazy" data-original="/images/community/high-performance-tidb/segmentfault.png"
+          src="/images/svgs/loader-spinner.svg" alt="sponsor logo">
+        <img class="lazy" data-original="/images/community/high-performance-tidb/datafun.svg"
+          src="/images/svgs/loader-spinner.svg" alt="sponsor logo">
+        <img class="lazy" data-original="/images/community/high-performance-tidb/csdn.svg"
+          src="/images/svgs/loader-spinner.svg" alt="sponsor logo">
+        <img class="lazy" data-original="/images/community/high-performance-tidb/gocn.svg"
+          src="/images/svgs/loader-spinner.svg" alt="sponsor logo">
       </div>
     </div>
   </div>
