--- a/src/less/community/high-performance-tidb-challenge.less
+++ b/src/less/community/high-performance-tidb-challenge.less
@@ -462,6 +462,10 @@ section {
                 font-size: 32px;
                 font-weight: 600;
             }
+
+            a {
+                color: @C2;
+            }
         }
     }
 
