chore: update content

--- a/layouts/community-cn/high-performance-tidb-challenge.html
+++ b/layouts/community-cn/high-performance-tidb-challenge.html
@@ -201,17 +201,17 @@ High Performance TiDB Challenge
       </div>
       <div class="content">
         <div class="award">
-          <div class="award-level">一等奖</div>
+          <div class="award-level">第一名</div>
           <div class="detail">每支参赛队伍 <span class="strong">5 万元</span> RMB + 团队顾问个人奖金 <span class="strong">1 万元</span>
             RMB</div>
         </div>
         <div class="award">
-          <div class="award-level">二等奖</div>
+          <div class="award-level">第二名</div>
           <div class="detail">每支参赛队伍 <span class="strong">3 万元</span> RMB + 团队顾问个人奖金 <span class="strong">1 万元</span>
             RMB</div>
         </div>
         <div class="award">
-          <div class="award-level">三等奖</div>
+          <div class="award-level">第三名</div>
           <div class="detail">每支参赛队伍 <span class="strong">1 万元</span> RMB</div>
         </div>
         <div class="award">
@@ -224,7 +224,7 @@ High Performance TiDB Challenge
             </a></div>
         </div>
         <div class="annotation">
-          注：获奖队伍最终由评委判定，总共不超过 5 支。所有完赛选手都可以获得神秘纪念周边一个～如获奖队伍没有顾问，则顾问奖金分发到参赛小组。
+          注：所有完赛选手都可以获得神秘纪念周边一个～如获奖队伍没有顾问，则顾问奖金分发到参赛小组。如果本次没有足够的项目完成比赛，奖金将会累积到第二季比赛和 hackathon 共享奖金池。
         </div>
       </div>
     </div>
