--- a/layouts/community-cn/high-performance-tidb-challenge.html
+++ b/layouts/community-cn/high-performance-tidb-challenge.html
@@ -469,6 +469,8 @@ High Performance TiDB Challenge
           src="/images/svgs/loader-spinner.svg" alt="sponsor logo">
         <img class="lazy" data-original="/images/community/high-performance-tidb/gocn.svg"
           src="/images/svgs/loader-spinner.svg" alt="sponsor logo">
+          <img class="lazy" data-original="/images/community/high-performance-tidb/banyu.png"
+            src="/images/svgs/loader-spinner.svg" alt="sponsor logo">
       </div>
     </div>
   </div>
