--- a/layouts/download-cn/community.html
+++ b/layouts/download-cn/community.html
@@ -43,6 +43,7 @@
                                 <option>v4.0.4</option>
                                 <option>v4.0.5</option>
                                 <option>v4.0.6</option>
+                                <option>v4.0.7</option>
                             </select>
                         </div>
                     </div>
