--- a/layouts/community-cn/high-performance-tidb-challenge.html
+++ b/layouts/community-cn/high-performance-tidb-challenge.html
@@ -6,7 +6,7 @@ High Performance TiDB Challenge
 {{- define "headTpl" -}}
 {{ $.Scratch.Set "nav_active" "community" }}
 {{ $.Scratch.Set "data_i18_cn" true }}
-{{ $.Scratch.Set "data_i18_link" "/community/organization" }}
+{{ $.Scratch.Set "data_i18_link" "/community/events/high-performance-tidb-challenge" }}
 {{- partial "head/preload-css" (dict "href" "/css/community/high-performance-tidb-challenge.css") -}}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css" />
 <link
@@ -162,6 +162,7 @@ High Performance TiDB Challenge
             各地办公室同步进行现场答辩（海外队伍可线上进行答辩）。</div>
           <button class="button grading-btn">评分标准</button>
           <div class="grading">
+            <div class="close">X</div>
             <div class="grading-title">评分标准</div>
             <div class="item">
               <p class="criterion">性能提升度 （65%）</p>
