chore: add new tidb download package

--- a/layouts/download-cn/community.html
+++ b/layouts/download-cn/community.html
@@ -44,6 +44,7 @@
                                 <option>v4.0.5</option>
                                 <option>v4.0.6</option>
                                 <option>v4.0.7</option>
+                                <option>v4.0.8</option>
                             </select>
                         </div>
                     </div>
