chore: update content on about-cn

--- a/src/less/about.less
+++ b/src/less/about.less
@@ -300,6 +300,10 @@ section[class^="about-"] {
   .desc {
     margin: 0 auto !important;
     text-align: justify;
+
+    p {
+      margin-bottom: 1rem;
+    }
   }
 }
 
