--- a/src/less/cases.less
+++ b/src/less/cases.less
@@ -119,35 +119,43 @@
     }
 
     &.tab-0::before {
-      background: url(/images/svgs/icon-internet.svg) 100% 100% no-repeat;
+      background: url(/images/svgs/icon-internet.svg) center / contain no-repeat;
     }
 
     &.tab-0.is-active::before {
-      background: url(/images/svgs/icon-internet-white.svg) 100% 100% no-repeat;
+      background: url(/images/svgs/icon-internet-white.svg) center / contain no-repeat;
     }
 
     &.tab-1::before {
-      background: url(/images/svgs/icon-video-game.svg) 100% 100% no-repeat;
+      background: url(/images/svgs/icon-video-game.svg) center / contain no-repeat;
     }
 
     &.tab-1.is-active::before {
-      background: url(/images/svgs/icon-video-game-white.svg) 100% 100% no-repeat;
+      background: url(/images/svgs/icon-video-game-white.svg) center / contain no-repeat;
     }
 
     &.tab-2::before {
-      background: url(/images/svgs/icon-payment.svg) 100% 100% no-repeat;
+      background: url(/images/svgs/icon-payment.svg) center / contain no-repeat;
     }
 
     &.tab-2.is-active::before {
-      background: url(/images/svgs/icon-payment-white.svg) 100% 100% no-repeat;
+      background: url(/images/svgs/icon-payment-white.svg) center / contain no-repeat;
     }
 
     &.tab-3::before {
-      background: url(/images/svgs/icon-industry.svg) 100% 100% no-repeat;
+      background: url(/images/svgs/icon-industry.svg) center / contain no-repeat;
     }
 
     &.tab-3.is-active::before {
-      background: url(/images/svgs/icon-industry-white.svg) 100% 100% no-repeat;
+      background: url(/images/svgs/icon-industry-white.svg) center / contain no-repeat;
+    }
+
+    &.tab-4::before {
+      background: url(/images/svgs/icon-government.svg) center / contain no-repeat;
+    }
+
+    &.tab-4.is-active::before {
+      background: url(/images/svgs/icon-government-white.svg) center / contain no-repeat;
     }
   }
 
