--- a/layouts/community-cn/hackathon2020.html
+++ b/layouts/community-cn/hackathon2020.html
@@ -117,7 +117,7 @@
 
 	<section class="hackathon2020__section">
         <h2 class="section__title" id="prize-pool">奖项设置</h2>
-        <div class="list-flex container">
+        <div class="list-flex container prize-container">
             {{- range $idx, $i := .Site.Data.hackathon_cn_2020.awards -}}
                 <div class="award-card" data-name="{{ $i.award }}" data-team="{{ $i.team_numbers }}"></div>
             {{- end -}}
