chore: add a new award

--- a/src/less/community/hackathon2020.less
+++ b/src/less/community/hackathon2020.less
@@ -581,6 +581,12 @@
     }
   }
 
+  &:nth-child(8) {
+    &:hover {
+      background-image: url('https://download.pingcap.com/images/community/hackathon2020/bg-award-card-8-hover.svg');
+    }
+  }
+
   &.en {
     &:nth-child(1):hover {
       background-image: url('https://download.pingcap.com/images/community/hackathon2020/bg-award-card-1-hover-en.svg');
@@ -608,6 +614,10 @@
 
     &:nth-child(7):hover {
       background-image: url('https://download.pingcap.com/images/community/hackathon2020/bg-award-card-7-hover-en.svg');
+    }
+
+    &:nth-child(8):hover {
+      background-image: url('https://download.pingcap.com/images/community/hackathon2020/bg-award-card-8-hover-en.svg');
     }
   }
 }
