--- a/layouts/partials/layout/footer-cn.html
+++ b/layouts/partials/layout/footer-cn.html
@@ -51,6 +51,9 @@
             <div class="flex-list">
                 <h4 class="list-title"><strong>联系我们</strong></h4>
                 <ul>
+                    <li><a href="/" class="tel"  target="_blank">{{ partial "svgs/icon-phone.svg" (dict "width" 18 "height" 19 ) }} 商务咨询：</a></li>
+                    <li class="tel-li">4006790886</li>
+                    <li class="tel-li">8610-58400041</li>
                 <li><a href="https://twitter.com/PingCAP" class="twitter"  target="_blank">{{ partial "svgs/icon-twitter.svg" (dict "width" 18 "height" 19 ) }} Twitter</a></li>
                 <li><a href="https://www.linkedin.com/company/pingcap/" class="linkedin" target="_blank">{{ partial "svgs/icon-linked-in.svg" (dict "width" 18 "height" 16 ) }} LinkedIn</a></li>
                 <li><a href="https://www.reddit.com/r/TiDB/" class="reddit" target="_blank">{{ partial "svgs/icon-reddit.svg" (dict "width" 18 "height" 18 ) }} Reddit</a></li>
