--- a/layouts/partials/layout/header-cn.html
+++ b/layouts/partials/layout/header-cn.html
@@ -27,8 +27,8 @@
                     <li><a href="https://asktug.com" target="_blank"
                             onclick="trackViews('navbar-asktug', 'asktug_view')">问答</a></li>
                     <li {{ if eq $nav_active "download"}}class="sel" {{end}}><a href="/download-cn">下载试用</a></li>
-                    <li><a class="link-download" href="mailto:info@pingcap.com" target="_blank"
-                            onclick="trackViews('navbar-contact-us', 'mail_to_info_view')">联系我们</a></li>
+                    <li><a class="link-download" href="/about-cn/#contact-us"
+                            onclick="trackViews('navbar-contact-us', 'about_cn_view')">联系我们</a></li>
                 </ul>
             </div>
             <div class="global-search">
